--- a/docs/assets/styles/reset.css
+++ b/docs/assets/styles/reset.css
@@ -17,6 +17,7 @@
 body {
   margin: 0;
   /* 1 */
+  height: 100%;
   font-size: 14px;
   font-family: "Helvetica Neue", Helvetica, STHeiTi, Arial, sans-serif;
 }
